feat(App): сменит название сайта

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Сайт базы отдыха в Челябинской области" />
-    <title>У семи озёр</title>
+    <meta name="description" content="Сайт клуба Карась в Челябинской области" />
+    <title>Клуб Карась</title>
   </head>
   <body>
     <div id="root"></div>
